Remove commented out code and update character abilities

--- a/Guida.tex
+++ b/Guida.tex
@@ -62,15 +62,15 @@
 
 \input{data/Personaggi/Razze.tex}
 
-\input{data/Personaggi/Artefice.tex}
+%\input{data/Personaggi/Artefice.tex}
 
-\input{data/Personaggi/Barbaro.tex}
+%\input{data/Personaggi/Barbaro.tex}
 
-\input{data/Personaggi/Bardo.tex}
+%\input{data/Personaggi/Bardo.tex}
 
 \input{data/Personaggi/Chierico.tex}
 
-\input{data/Personaggi/Druido.tex}
+%\input{data/Personaggi/Druido.tex}
 
 \input{data/Personaggi/Guerriero.tex}
 
@@ -82,7 +82,7 @@
 
 \input{data/Personaggi/Paladino.tex}
 
-\input{data/Personaggi/Ranger.tex}
+%\input{data/Personaggi/Ranger.tex}
 
 \input{data/Personaggi/Stregone.tex}
 
