--- a/data/Eovras/Magia.tex
+++ b/data/Eovras/Magia.tex
@@ -20,6 +20,10 @@
 
 Desiderio è un incantesimo potentissimo, il cui potenziale è compreso da pochissime creature, probabilmente solo un paio di esse di origine mortale. \\ Purtroppo a Eovras la conoscenza di come lanciare Desiderio è stata perduta, quindi gli incantatori che avrebbero accesso a questo leggendario incantesimo non possono sceglierlo o ottenerlo passivamente. \\ Ci sono tuttavia entità in grado di soddisfare desideri, e di sicuro un avventuriero sufficientemente determinato potrà ottenere in qualche modo almeno un utilizzo di questo incantesimo... forse...
 
+\subsection{Resurrezione}
+
+Resuscitare qualcuno è una faccenda relativamente semplice a livello magico, posto di avere il giusto catalizzatore. Purtroppo tale catalizzatore, ovvero il diamante, non esiste in natura. Girano voci tuttavia di un nano, un certo Hausdwarf, che nella sua dimora abbia trovato il modo di fabbricarli, ma sono solo dicerie... forse...
+
 \section{Il pantheon di Eovras}
 
 \DndDropCapLine{I}{}ndipendentemente dalla volontà di un certo Enefeles, a Eovras esistono in effetti diverse divinità, le quali regolano vari aspetti dell'esistenza insieme a moltissimi spiriti minori. Per mia mancanza di creatività, il Pantheon di Eovras ricalca quello ideato da J. R. R. Tolkien ne "Il Silmarillion". I Valar fungono da divinità maggiori, i Maiar da divinità minori e spiriti vari. Quindi sì, se ve lo steste chiedendo, Olorin (anche conosciuto come Mithrandir, Gandalf il Grigio, Gandalf il Bianco, Gandalf il Gandalf, Ganjalf e Gandalf il Rimbambito) esiste a Eovras.
