--- a/data/Personaggi/Guerriero.tex
+++ b/data/Personaggi/Guerriero.tex
@@ -48,13 +48,13 @@
     \DndMonsterSection{Azioni}
 
     \DndMonsterAction{Multiattacco}
-    Brunilde compie due \textit{attacchi con lancia} o un \textit{attacco con lancia} e un \textit{attacco con scudo}.
+    Brunilde compie due \textit{attacchi con lancia} o un \textit{attacco con scudo}.
 
     \DndMonsterAction{Attacco con lancia}
     Attacco da mischia, +11 al tiro per colpire, \DndDice{1d10+5} danni perforanti (magici) sul colpo e \DndDice{1d8} danni radiosi aggiuntivi
 
     \DndMonsterAction{Attacco con scudo}
-    Attacco da mischia, +11 al tiro per colpire, \DndDice{2d6+5} danni contundenti (magici) sul colpo e \DndDice{1d8} danni radiosi aggiuntivi
+    Attacco da mischia, +11 al tiro per colpire, \DndDice{2d6+5} danni contundenti (magici) sul colpo e \DndDice{1d8} danni radiosi aggiuntivi. Sul colpo, tiro salvezza su Costituzione (CD 19): in caso di fallimento, il bersaglio è stordito fino alla fine del suo turno successivo.
 
     \DndMonsterSection{Azioni bonus}
     
@@ -62,26 +62,24 @@
     Brunilde si muove verso una creatura entro la sua velocità di movimento totale ed effettua un \textit{attacco con scudo} al suo arrivo.
 
     \DndMonsterSection{Reazioni}
+
     \DndMonsterAction{Soccorso divino}
     Brunilde può teletrasportarsi con una reazione davanti al guerriero che l'ha evocata e lanciare l'incantesimo \textit{Scudo} come parte della stessa reazione.
 
-
+    \DndMonsterAction{Colpo di Grazia}
+    Quando i punti ferita del guerriero che l'ha evocata scendono a 0, Brunilde si teletrasporta sulla sua posizione come reazione e all'inizio del suo prossimo turno lancia il trucchetto \textit{Colpo di Grazia} per poi sparire come azione bonus.
   \end{multicols}
 \end{DndMonster}
 
-\section{Archetipo Marziale: Protetto dalla Valchiria}
+\section{Campione Variante}
 
-\subsection{Senza Paura}
-A partire dal 3° livello, il Guerriero è immune alla condizione di "Spaventato" e supera in automatico le prove di Carisma contro le prove di Intimidazione (Carisma) delle altre creature.
+\subsection{Senza Paura (sostituisce Critico Migliorato)}
+A partire dal 3° livello, il Guerriero è immune alla condizione di "Spaventato" e supera in automatico le prove di caratteristica contro le prove di Intimidazione (Carisma) delle altre creature.
 
-\subsection{7° liv}
+\subsection{Angelo della Battaglia (sostituisce Critico Superiore)}
+A partire dal 15° livello, una volta per riposo breve, il Guerriero può usare la sua azione per invocare l'aiuto di una Valchiria.\\
+Per il prossimo minuto, può lanciare a volontà l'incantesimo \textit{Scudo} usando la sua reazione, le sue prove di caratteristica sono considerate influenzate dall'azione di \textit{Aiuto} da parte di una creatura invisibile e la sua velocità di movimento aumenta di 4,5 metri, inoltre non subisce gli effetti del terreno difficile.
 
-\subsection{10° liv}
-
-\subsection{15}
-A partire dal 15° livello, una volta per riposo breve, il Guerriero può usare la sua azione per invocare l'aiuto di una Valchiria.
-Per il prossimo minuto, può lanciare a volontà l'incantesimo \textit{Scudo} usando la sua reazione, le sue prove di caratteristica sono considerate influenzate dall'azione di \textit{Aiuto} da parte di una creatura invisibile
-
-\subsection{18}
-A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare la sua reazione per evocare Brunilde. \\ Essa viene considerata una creatura alleata e viene congedata fino al combattimento successivo quando il combattimento termina o i suoi punti ferita finiscono. Se i punti ferita del Guerriero scendono a 0, Brunilde userà il suo privilegio \textit{Soccorso Divino} e lancerà il trucchetto \textit{Colpo di Grazia} come parte della stessa reazione.
+\subsection{Ali della Vittoria (sostituisce Sopravvissuto)}
+A partire dal 18° livello, quando tira per iniziativa, il Guerriero può usare la sua reazione per evocare Brunilde. \\ Essa viene considerata una creatura alleata e viene congedata fino al combattimento successivo quando il combattimento termina o i suoi punti ferita finiscono. Se i punti ferita del Guerriero scendono a 0, Brunilde userà il suo privilegio \textit{Colpo di Grazia} come reazione.
 
