--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -1,9 +1,9 @@
 
 \chapter{Oggetti magici}
 
-\section{Anello protettore di Sophos il Savio}
+%\section{Anello protettore di Sophos il Savio}
 
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
+%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
 
 % \DndDropCapLine{D}{}urante le sue ricerche per scoprire quanto più possibile sulla magia, il mago Ælinor Könungru si è imbattuto in un incantesimo estremamente antico e potente, che appena lanciato ha cominciato a consumarne il corpo. Per fortuna è riuscito a contenerlo e ad isolarlo nel proprio braccio grazie al potere dell'Anello Protettore di Sophos il Savio. L'incantesimo non è tuttavia sparito, e i suoi segni sono rimasti impressi sulla pelle del mago.
 
@@ -27,13 +27,13 @@
 % \textit{Requisito: 12 livelli in sintonia con l'anello.}\\
 % Una volta per riposo lungo, l'Incantatore può usare la sua reazione per spostare l'incantesimo \textit{Limita Magia} dal suo corpo ad un punto esterno. Fare questo tuttavia libera l'incantesimo nel suo corpo, il quale finché la bolla non viene ripristinata subisce 1d6+2 danni necrotici ogni volta che lancia un incantesimo e 1d4 danni necrotici ogni turno. Se l'incantatore mantiene un'altra concentrazione, ogni turno deve passare un TS su costituzione con CD pari alla propria CD del tiro salvezza contro gli incantesimi, altrimenti la perde. Se l'incantatore muore per questi danni, si trasforma in un divorato.
 
-\section{STOCCO DI SARZEE}
+%\section{STOCCO DI SARZEE}
 
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Bardo}
+%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Bardo}
 
-\section{Prigione Fluida di PATRONO DI SIMONE}
+%\section{Prigione Fluida di PATRONO DI SIMONE}
 
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock}
+%\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock}
 
 \section{Oggetti Minori}
 
@@ -70,3 +70,11 @@ Come azione, l'indossatore può toccare due volte l'anello e teletrasportarsi ne
 
 \subsubsection{Stereoscopia}
 Se i due anelli sono indossati da persone diverse, come azione l'indossatore dell'occhio destro può girare l'anello sul dito e percepire il mondo dalla prospettiva dell'indossatore dell'occhio sinistro, non importa dove esso si trovi. A sua volta, l'indossatore dell'occhio sinistro può usare la sua azione per teletrasportarsi nell'ombra dell'indossatore dell'occhio destro. \\ Usare questo privilegio conta come un utilizzo. Se uno dei due anelli sta venendo utilizzato, l'altro indossatore ne è a conoscenza.
+
+\subsection{Errori di battitura}
+Esiste tutta una classe di oggetti magici che nascono quando il DM fa qualche errore di battitura. Ne incontrerete molti, e verranno tutti messi qui.
+
+\subsubsection{Alabarba}
+\textit{Arma magica comune}\\
+Quando un personaggio impugna l'Alabarba, gli cresce istantaneamente una barba. Se questi possiede già una barba, a questa crescerà un'altra barba. Se il personaggio smette di impugnare l'Alabarba, la barba sparisce istantaneamente. Finchè impugna l'Alabarba, il personaggio ha un bonus di +1 alle prove di Carisma.\\
+L'Alabarba è assolutamente indistinguibile da un'alabarda normale. Qualsiasi alabarda quando viene fabbricata ha una piccola possibilità di diventare un'Alabarba.
