Fix typos and update section titles in Warlock.tex

--- a/data/Personaggi/Warlock.tex
+++ b/data/Personaggi/Warlock.tex
@@ -21,7 +21,7 @@ Riottenere questa supplica dopo averla rimossa richiede di riabituarsi a essa.
 \textit{Prerequisito: trucchetto Deflagrazione Occulta} \\
 Un numero di volte pari al suo bonus di competenza per riposo breve, quando il Warlock colpisce un bersaglio con il trucchetto Deflagrazione Occulta, come azione bonus può imporre al bersaglio di tirare dalla tabella della Magia Selvaggia un numero di volte pari al numero di raggi da cui è stato colpito.
 
-\section{Patrono Ultraterreno: lo Spazio Proiettivo}
+\section{Patrono Ultraterreno: Spazio Proiettivo}
 
 \begin{DndReadAloud}
   \it
@@ -57,7 +57,7 @@ A partire dal 10° livello, un numero di volte pari al suo bonus di competenza p
 
 A partire dal 14° livello, una volta per riposo breve, il Warlock può usare la sua azione bonus per generare un'aura di Geometria Pura nel raggio di 36m intorno a sè. \\ Fino alla fine del prossimo turno del Warlock, tutti gli attacchi a distanza che richiedono un tiro per colpire effettuati da creature dentro l'aura contro altre creature dentro l'aura vanno automaticamente a segno senza effettuare il tiro per colpire.
 
-\section{Patrono Ultraterreno: il Signore dell'Assurdo}
+\section{Patrono Ultraterreno: Signore dell'Assurdo}
 
 \DndDropCapLine{N}{}el multiverso sono poche le creature in grado di esistere contemporaneamente in ogni realtà. È questo il caso dell'entità conosciuta nel nostro mondo come il Signore dell'Assurdo. A voi potrebbe essere familiare sotto altri nomi, come Il Triangolo, Fancy Dorito, Alex, o il suo preferito... Bill. \\ Il suo vero obiettivo non è chiaro, ma una cosa è certa: ciò che pretende dai suoi Warlock è una sana dose di divertimento.
 
