Fix typos and update content in Guida.aux, Guida.log, Guida.pdf, Guida.toc, and Mythrenwald.tex

--- a/data/Eovras/Mythrenwald.tex
+++ b/data/Eovras/Mythrenwald.tex
@@ -41,11 +41,11 @@ Disseminati per la foresta esistono tutta una serie di piccoli villaggi, sarebbe
 
 \subsubsection{Il cieco con gli occhi aperti}
 
-Nessuno conosce davvero la storia di come il grande Guardiano di Mythrenwald abbia perso la vista, ma tutti coloro che ne abbiano mai sentito parlare sanno bene che non è saggio assumere che Halimath Selevarum non sia altro che un monaco cieco e indifeso. \\ La sua sconfinata saggezza è frutto dell'esperienza di quasi nove secoli, la sua è una storia di redenzione e di introspezione... ma non è detto che sia così propenso a raccontarvela.
+Nessuno conosce davvero la storia di come il grande Guardiano di Mythrenwald abbia perso la vista, e nemmeno come l'abbia riottenuta, ma tutti coloro che ne abbiano mai sentito parlare sanno bene che non è saggio assumere che Halimath Selevarum non sia altro che un vecchio monaco indifeso. \\ La sua sconfinata saggezza è frutto dell'esperienza di quasi nove secoli, la sua è una storia di redenzione e di introspezione... ma non è detto che sia così propenso a raccontarvela.
 
 \subsubsection{Un passato oscuro}
 
-Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando ormai era già un guerriero esperto. \\ Una notte d'estate fu trovato in una radura, nudo e privo di sensi, il suo corpo pieno di bruciature e cicatrici, ma con un sorriso sereno in volto. Quando i druidi di Mythrenwald riuscirono a fargli riprendere i sensi, si trovarono davanti un elfo completamente in pace con sè stesso. Non parlò mai a nessuno del suo passato.
+Sono in pochi coloro che sanno che in realtà Halimath è giunto a Eovras quando ormai era già un guerriero esperto. \\ Una notte d'estate fu trovato in una radura, nudo e privo di sensi, il suo corpo pieno di bruciature e cicatrici, ma con un sorriso sereno in volto. Quando i druidi di Mythrenwald riuscirono a fargli riprendere i sensi, si trovarono davanti un elfo completamente in pace con sè stesso. Non parlò mai a nessuno del suo passato, ma qualcuno giura di avergli sentito sussurrare un nome qualche volta, sebbene non sappia ripeterlo. Bizzarro, vero?
 
 \subsection{I Druidi di Mythrenwald}
 
