Remove input for Mago character and add new rule for 20 Naturale

--- a/Guida.tex
+++ b/Guida.tex
@@ -76,7 +76,7 @@
 
 \input{data/Personaggi/Ladro.tex}
 
-\input{data/Personaggi/Mago.tex}
+%\input{data/Personaggi/Mago.tex}
 
 \input{data/Personaggi/Monaco.tex}
 
