--- a/data/Ipotesi/Regole.tex
+++ b/data/Ipotesi/Regole.tex
@@ -100,6 +100,10 @@ Questo tipo di assenza andrebbe discussa con più attenzione e soprattutto anche
 
 \DndDropCapLine{Q}{}ueste regole sono quelle che deviano o si aggiungono alle regole (o banalmente riporto da un manuale reinterpretate) di D\&D e che preferisco utilizzare nelle mie campagne.
 
+\subsection{20 Naturale}
+
+Trovo che sia estremamente divertente l'idea che il 20 naturale permetta di fare letteralmente qualsiasi cosa. Lo so, RAW sarebbe "il migliore esito \textit{possibile}", ma io preferisco dire che sì, fanculo, 20 nat è un successo automatico e pure con cose fuori di testa. Vuoi persuadere una porta ad aprirsi? Sicuro, occhio che se fallisci però potrebbe offendersi...
+
 \subsection{Realismo stronzo}
 
 La quinta edizione di D\&D non è bilanciata intorno all'idea di una battaglia per riposo lungo, i personaggi hanno semplicemente troppe opzioni e si finisce per trascurare l'importante fattore di gestione delle risorse che giustifica la minore versatilità dei combattenti rispetto agli incantatori, ma allo stesso tempo giocare qualcosa come 5 o 6 incontri al giorno può risultare estenuante. Per questo io preferisco implementare la regola del \textit{Realismo Crudo}: un riposo breve richiede 8 ore e un riposo lungo richiede una settimana. \\ A meno che non sia specificato il contrario dal DM, le regole dei dadi vita sono da rispettare.
