Fix typo and add new spell in Incantesimi.tex and Magia.tex

--- a/data/Eovras/Magia.tex
+++ b/data/Eovras/Magia.tex
@@ -16,6 +16,10 @@
 \paragraph{Il playback degli Warlock}Come ai Warlock non piace ricordare, il loro potere in realtà deriva da quello di altre entità, in un certo senso gli warlock nel migliore dei casi fanno una cover, nel peggiore cantano in playback...
 \paragraph{I Bardi ve li spiegate da soli}La spiegazione del bardo è banale e lasciata come esercizio per il lettore.
 
+\subsection{Scuola di Matemagia}
+
+Il lettore avrà notato una serie di sottoclassi di ispirazione matematica, a esse è associata la scuola di incantesimi della Matemagia, un arguto e sottile gioco di parole che unisce le parole "Matematica" e "Magia". Geniale, vero?
+
 \subsection{Desiderio}
 
 Desiderio è un incantesimo potentissimo, il cui potenziale è compreso da pochissime creature, probabilmente solo un paio di esse di origine mortale. \\ Purtroppo a Eovras la conoscenza di come lanciare Desiderio è stata perduta, quindi gli incantatori che avrebbero accesso a questo leggendario incantesimo non possono sceglierlo o ottenerlo passivamente. \\ Ci sono tuttavia entità in grado di soddisfare desideri, e di sicuro un avventuriero sufficientemente determinato potrà ottenere in qualche modo almeno un utilizzo di questo incantesimo... forse...
