--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -42,6 +42,14 @@ Colpo di Grazia
 L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e la uccide, mandando la sua anima nel Walhalla (o in un luogo ultraterreno equivalente).\\ Fino al prossimo riposo lungo, l'arma utilizzata viene considerata magica al fine di ignorare le resistenze ai danni da armi non magiche e in sintonia con l'incantatore, i suoi colpi infliggono 1d4 danni radiosi aggiuntivi contro i non morti. \\ Una creatura uccisa in questo modo non può essere resa un non morto e non può essere riportata in vita se non dall'intervento di una divinità o dall'incantesimo \textit{Desiderio}.
 
 \DndSpellHeader%
+  {Estensione di Dominio}
+  {Matemagia di 7° livello}
+  {1 ora (rituale)}
+  {Contatto}
+  {V,S,M (Diamanti del valore complessivo di 2500 mo che non vengono consumati)}
+  L'incantatore tocca una creatura consenziente. A partire dal termine dell'incantesimo, la creatura può sintonizzarsi con qualsiasi oggetto magico (indipendentemente dai requisiti) e qualsiasi numero di essi contemporaneamente.
+
+\DndSpellHeader%
   {Limita Magie}
   {Abiurazione di 7° livello}
   {1 reazione, che l'incantatore effettua quando viene lanciato un incantesimo con bersaglio entro gittata}
