--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -1,6 +1,8 @@
 
 \chapter{Oggetti magici}
 
+\section{Oggetti legati ai personaggi dei giocatori}
+
 %\section{Anello protettore di Sophos il Savio}
 
 %\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
@@ -35,9 +37,7 @@
 
 %\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock}
 
-\section{Oggetti Minori}
-
-\DndDropCapLine{N}{}on tutti gli oggetti magici devono essere artefatti leggendari e meravigliosi, ogni tanto è bello inventarsi qualche oggettino simpatico da aggiungere per qualche evento inaspettato nelle avventure!
+\section{Oggetti non legati ai personaggi dei giocatori}
 
 \subsection{Guanti del CleptoMana}
 \textit{Richiede sintonia con un Warlock} 
@@ -70,6 +70,32 @@ Come azione, l'indossatore può toccare due volte l'anello e teletrasportarsi ne
 
 \subsubsection{Stereoscopia}
 Se i due anelli sono indossati da persone diverse, come azione l'indossatore dell'occhio destro può girare l'anello sul dito e percepire il mondo dalla prospettiva dell'indossatore dell'occhio sinistro, non importa dove esso si trovi. A sua volta, l'indossatore dell'occhio sinistro può usare la sua azione per teletrasportarsi nell'ombra dell'indossatore dell'occhio destro. \\ Usare questo privilegio conta come un utilizzo. Se uno dei due anelli sta venendo utilizzato, l'altro indossatore ne è a conoscenza.
+
+\subsection{Frattura}
+\textit{Pugnale magico (+0, 1d6 danni magici taglienti) che richiede sintonia con un Ladro, la sua potenza dipende dal livello del Ladro, oggetto meraviglioso, leggendario}
+
+\subsubsection{Squarcio dimensionale}
+A partire dal 1° livello, l'utilizzatore può usare un'azione bonus per tagliare lo spazio e aprire un portale di circa 30 cm di raggio per un punto entro 9m che è sia grado di vedere. Può attaccare attraverso questo portale, che si richiude alla fine del suo turno.
+
+\subsubsection{Fenditura silenziosa}
+A partire dal 4° livello, l'utilizzatore quando usa \textit{Squarcio dimensionale} può scegliere una creatura che sia in grado di vedere ed effettuare una prova di caratteristica di Destrezza (Furtività) contro la sua percezione passiva. Se la supera, il portale si apre dietro la creatura (che ne è inconsapevole) e il prossimo attacco effettuato attraverso di esso ha vantaggio.
+
+\subsubsection{Strappo duraturo}
+A partire dall'8° livello, i portali aperti con \textit{Squarcio dimensionale} permangono per un'ora, o fino a che l'utilizzatore non li chiude con un'azione bonus o usa di nuovo \textit{Squarcio dimensionale} per aprirne un altro.
+
+\subsubsection{Gringott}
+A partire dal 10° livello, l'utilizzatore può usare \textit{Squarcio dimensionale} per lanciare l'incantesimo \textit{Semipiano}. Il portale si apre ogni volta su un semipiano di nome "Gringott", legato al pugnale. Solo creature in sintonia con Frattura possono accedere a Gringott lanciando l'incantesimo \textit{Semipiano}.
+
+\subsubsection{Espansione immobiliare}
+A partire dal 12° livello, quando l'utilizzatore scopre un oggetto a cui è legato un semipiano, può usare la sua azione per effettuare una prova di caratteristica di Destrezza (Rapidità di mano) contro la CD per il TS contro gli incantesimi dell'incantatore che ha creato il semipiano.\\
+Se ha successo, il semipiano diventa parte di Gringott. Una porta per esso appare su uno dei muri di Gringott scelto dall'incantatore. Se Gringott è già composta da diversi semipiani, la porta può apparire in uno qualsiasi di essi. L'utilizzatore può riarrangiare la struttura dei semipiani di Gringott a suo piacimento.\\
+L'oggetto da cui è stato sottratto il semipiano mantiene le sue proprietà di porta per esso per un ultimo viaggio, dopodichè perde queste proprietà magiche, ma non viene distrutto e mantiene le altre, se ne aveva.
+
+\subsubsection{Fendispazio}
+A partire dal 16° livello, i danni di Frattura aumentano a 2d6 e \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} verso una destinazione sullo stesso piano di esistenza.
+
+\subsubsection{Fendispazio interplanare}
+A partire dal 19° livello, \textit{Squarcio dimensionale} può essere usato per lanciare l'incantesimo \textit{Portale} senza limitazioni.
 
 \subsection{Errori di battitura}
 Esiste tutta una classe di oggetti magici che nascono quando il DM fa qualche errore di battitura. Ne incontrerete molti, e verranno tutti messi qui.
