Update Guida.log and Oggetti.tex

--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -103,4 +103,4 @@ Esiste tutta una classe di oggetti magici che nascono quando il DM fa qualche er
 \subsubsection{Alabarba}
 \textit{Arma magica comune}\\
 Quando un personaggio impugna l'Alabarba, gli cresce istantaneamente una barba. Se questi possiede già una barba, a questa crescerà un'altra barba. Se il personaggio smette di impugnare l'Alabarba, la barba sparisce istantaneamente. Finchè impugna l'Alabarba, il personaggio ha un bonus di +1 alle prove di Carisma.\\
-L'Alabarba è assolutamente indistinguibile da un'alabarda normale. Qualsiasi alabarda quando viene fabbricata ha una piccola possibilità di diventare un'Alabarba.
+L'Alabarba è assolutamente indistinguibile da un'alabarda normale. Qualsiasi alabarda quando viene fabbricata ha una piccola possibilità (1\%) di diventare un'Alabarba.
