--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -3,6 +3,18 @@
 
 \section{Oggetti legati ai personaggi dei giocatori}
 
+\subsection{Tavoletta di Minera Ioun}
+\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Sapiente specializzato in Strategia}
+
+\subsection{Quaderno del Demiurgo}
+\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione}
+
+\subsection{Prigione fluida di Absynthe}
+\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
+
+\subsection{Borsa degli arnesi stupefacenti di Ciaci el Kinder}
+\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Druido del Circolo della Luna}
+
 %\section{Anello protettore di Sophos il Savio}
 
 %\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
