--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -12,7 +12,7 @@
 \subsection{Prigione fluida di Absynthe}
 \textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
 
-\subsection{Borsa degli arnesi stupefacenti di Ciaci el Kinder}
+\subsection{Borsa degli arnesi stupefacenti di Skardy}
 \textit{Artefatto meraviglioso leggendario, richiede sintonia con un Druido del Circolo della Luna}
 
 %\section{Anello protettore di Sophos il Savio}
