Update timestamps and image references in Guida.log and Guida.pdf

--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -39,6 +39,7 @@ Colpo di Grazia
   {1 azione}
   {Contatto}
   {V,S,M (Un'arma che non viene consumata)}
+  {Istantanea}
 L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e la uccide, mandando la sua anima nel Walhalla (o in un luogo ultraterreno equivalente).\\ Fino al prossimo riposo lungo, l'arma utilizzata viene considerata magica al fine di ignorare le resistenze ai danni da armi non magiche e in sintonia con l'incantatore, i suoi colpi infliggono 1d4 danni radiosi aggiuntivi contro i non morti. \\ Una creatura uccisa in questo modo non può essere resa un non morto e non può essere riportata in vita se non dall'intervento di una divinità o dall'incantesimo \textit{Desiderio}.
 
 \DndSpellHeader%
@@ -47,6 +48,7 @@ L'incantatore esegue un rito su una creatura a 0 punti ferita, stabile o meno, e
   {1 ora (rituale)}
   {Contatto}
   {V,S,M (Diamanti del valore complessivo di 2500 mo che non vengono consumati)}
+  {Istantanea}
   L'incantatore tocca una creatura consenziente. A partire dal termine dell'incantesimo, la creatura può sintonizzarsi con qualsiasi oggetto magico (indipendentemente dai requisiti) e qualsiasi numero di essi contemporaneamente.
 
 \DndSpellHeader%
@@ -73,8 +75,8 @@ Tutte le creature influenzate sono spaventate fino alla fine del prossimo turno 
 {Invocazione di 11° livello}
 {1 minuto}
 {Incantatore (raggio d'azione infinito)}
-{V, S}
-{Istantanea/Infinita}
+{V, S, M (quello che si può considerare il vero nucleo dell'universo, che viene consumato)}
+{Istantanea}
 L'incantatore proietta la sua coscienza lungo tutti i piani dell'universo, in ogni direzione, nel passato e nel futuro, portando in tensione tutta l'energia dell'universo. \\ Al termine del tempo di lancio, questa energia viene rilasciata ed il tessuto dello spazio-tempo stesso inizia a intonare un accordo, risuonando perfettamente con l'anima dell'incantatore. \\ La realtà stessa viene completamente riplasmata secondo questo accordo, ricreando tutto l'universo in una nuova forma.
 
 \DndSpellHeader%
