Update Guida.log and Incantesimi.tex

--- a/data/Personaggi/Incantesimi.tex
+++ b/data/Personaggi/Incantesimi.tex
@@ -77,7 +77,7 @@ Tutte le creature influenzate sono spaventate fino alla fine del prossimo turno 
 {Incantatore (raggio d'azione infinito)}
 {V, S, M (quello che si può considerare il vero nucleo dell'universo, che viene consumato)}
 {Istantanea}
-L'incantatore proietta la sua coscienza lungo tutti i piani dell'universo, in ogni direzione, nel passato e nel futuro, portando in tensione tutta l'energia dell'universo. \\ Al termine del tempo di lancio, questa energia viene rilasciata ed il tessuto dello spazio-tempo stesso inizia a intonare un accordo, risuonando perfettamente con l'anima dell'incantatore. \\ La realtà stessa viene completamente riplasmata secondo questo accordo, ricreando tutto l'universo in una nuova forma.
+L'incantatore proietta la sua coscienza lungo tutti i piani dell'universo, in ogni direzione, nel passato e nel futuro, portando in tensione tutta l'energia del cosmo. \\ Al termine del tempo di lancio, questa energia viene rilasciata ed il tessuto dello spazio-tempo stesso inizia a intonare un accordo, risuonando perfettamente con l'anima dell'incantatore. \\ La realtà stessa viene completamente riplasmata secondo questo accordo, ricreando tutto l'universo in una nuova forma.
 
 \DndSpellHeader%
   {Punizione del Caos}
