--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -4,16 +4,22 @@
 \section{Oggetti legati ai personaggi dei giocatori}
 
 \subsection{Tavoletta di Minera Ioun}
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Sapiente specializzato in Strategia}
+\textit{Tavoletta interattiva (artefatto) meravigliosa leggendaria, richiede sintonia con un Sapiente specializzato in Strategia}
 
 \subsection{Quaderno del Demiurgo}
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione}
+\textit{Quaderno (artefatto) meraviglioso leggendario, richiede sintonia con un Bardo del Collegio della Creazione}
 
 \subsection{Prigione fluida di Absynthe}
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
+\textit{Arma simbiotica (artefatto) meravigliosa leggendaria, richiede sintonia con un Warlock della Lama del Sortilegio o un Paladino del Giuramento di Vendetta}
 
 \subsection{Borsa degli arnesi stupefacenti di Skardy}
-\textit{Artefatto meraviglioso leggendario, richiede sintonia con un Druido del Circolo della Luna}
+\textit{Borsa di strumenti (artefatto) meravigliosa leggendaria, richiede sintonia con un Druido del Circolo della Luna}
+
+\subsection{Sintetizzatore di Ebano di Tauriel Halamis}
+\textit{Strumento musicale (artefatto) meraviglioso leggendario, richiede sintonia con un Warlock del Signore dell'Assurdo}
+
+\subsection{Scudo della Fedeltà dell'Abisso}
+\textit{Amuleto (artefatto) meraviglioso leggendario, richiede sintonia con un Guerriero in grado di trasformarsi in un Lupo}
 
 %\section{Anello protettore di Sophos il Savio}
 
